--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Remove previous book folder
+      run: rm -rf book/
     - name: Install mdbook
       run: |
         mkdir ~/tools
